# motoman

motoman_gp215_support/: CMakeLists.txt  package.xml
motoman_gp215_support/config/: joint_limits.yaml
motoman_gp215_support/launch/: load_gp215.launch  robot_interface_streaming_gp215.launch  robot_state_visualize_gp215.launch  test_gp215.launch
motoman_gp215_support/meshes/collision/: gp215_bal_col.stl  gp215_base_link_col.stl  gp215_link_1_s_col.stl  gp215_link_2_l_col.stl  gp215_link_3_u_col.stl  gp215_link_4_r_col.stl  gp215_link_5_b_col.stl  gp215_link_6_t_col.stl
motoman_gp215_support/meshes/visual/: gp215_link_4_r.stl  gp215_link_6_t.stl
motoman_gp215_support/test/: launch_test_gp215.xml
motoman_gp215_support/urdf/: gp215_macro.xacro  gp215_robot_macro.xacro
motoman_gp400_support/: CMakeLists.txt  package.xml
motoman_gp400_support/config/: joint_limits.yaml
motoman_gp400_support/launch/: load_gp400.launch  robot_interface_streaming_gp400.launch  robot_state_visualize_gp400.launch  test_gp400.launch
motoman_gp400_support/meshes/collision/: GP400_BALANCER_AXIS.stl  GP400_BASE_AXIS.stl  GP400_B_AXIS.stl  GP400_LINK_A_AXIS.stl  GP400_LINK_B_AXIS.stl  GP400_L_AXIS.stl  GP400_R_AXIS.stl  GP400_S_AXIS.stl  GP400_T_AXIS.stl  GP400_U_AXIS.stl
motoman_gp400_support/meshes/visual/: GP400_BALANCER_AXIS.stl  GP400_BASE_AXIS.stl  GP400_B_AXIS.stl  GP400_LINK_A_AXIS.stl  GP400_LINK_B_AXIS.stl  GP400_L_AXIS.stl  (+4 more)
motoman_gp400_support/test/: launch_test_gp400.xml
motoman_gp400_support/urdf/: gp400.xacro  gp400_macro.xacro  gp400_robot_macro.xacro
(+23 files in other folders)
